Remove CreateBoundPoint.java